unpackaged/main/default/objects/clazar__Offer__c/clazar__Offer__c.object-meta.xml
<CustomObject>
    <label>Clazar Offer</label>
    <nameField>
        <label>Cloud Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clazar Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>