unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__accepted_at__c.field-meta.xml
<CustomField>
    <fullName>clazar__accepted_at__c</fullName>
    <label>Accepted At</label>
    <type>DateTime</type>
</CustomField>