unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__aws_source_contract_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__aws_source_contract_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AWS ABO Source Contract</label>
    <referenceTo>clazar__Contract__c</referenceTo>
    <relationshipLabel>Clazar Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>