unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__buyer_cloud_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__buyer_cloud_id__c</fullName>
    <label>Buyer Cloud Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>