unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__buyer_company_name__c.field-meta.xml
<CustomField>
    <fullName>clazar__buyer_company_name__c</fullName>
    <label>Buyer Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>