unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__end_date__c.field-meta.xml
<CustomField>
    <fullName>clazar__end_date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>