unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__eula_url__c.field-meta.xml
<CustomField>
    <fullName>clazar__eula_url__c</fullName>
    <label>EULA URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>