unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__expiration_at__c.field-meta.xml
<CustomField>
    <fullName>clazar__expiration_at__c</fullName>
    <label>Expiration At</label>
    <type>DateTime</type>
</CustomField>