unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__mapped_object_type__c.field-meta.xml
<CustomField>
    <fullName>clazar__mapped_object_type__c</fullName>
    <label>Mappec Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>