unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__name__c.field-meta.xml
<CustomField>
    <fullName>clazar__name__c</fullName>
    <label>Offer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>