unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__start_date__c.field-meta.xml
<CustomField>
    <fullName>clazar__start_date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>