unpackaged/main/default/objects/clazar__Offer__c/fields/clazar__usage_duration__c.field-meta.xml
<CustomField>
    <fullName>clazar__usage_duration__c</fullName>
    <label>Usage Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>