unpackaged/main/default/objects/clazar__Offer__c/fields/Open_in_Clazar__c.field-meta.xml
<CustomField>
    <fullName>Open_in_Clazar__c</fullName>
    <formula>HYPERLINK(&quot;https://app.clazar.io/offer/&quot;&amp;clazar__uuid__c, &quot;Link&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open in Clazar</label>
    <type>Text</type>
</CustomField>