unpackaged/main/default/objects/clazar__Offer__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Clazar Offers</relationshipLabel>
    <relationshipName>Clazar_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>