unpackaged/main/default/objects/clazar__Offer__c/fields/Opportunity_Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Is_Closed__c</fullName>
    <formula>Opportunity__r.IsClosed</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity: Is Closed?</label>
    <type>Checkbox</type>
</CustomField>