unpackaged/main/default/objects/clazar__Offer__c/fields/Slack_Alert_At_Offer_Expired__c.field-meta.xml
<CustomField>
    <fullName>Slack_Alert_At_Offer_Expired__c</fullName>
    <label>Slack Alert At: Offer Expired</label>
    <type>DateTime</type>
</CustomField>