unpackaged/main/default/objects/clazar__Offer__c/fields/Slack_Alert_At_Offer_Published__c.field-meta.xml
<CustomField>
    <fullName>Slack_Alert_At_Offer_Published__c</fullName>
    <label>Slack Alert At: Offer Published</label>
    <type>DateTime</type>
</CustomField>