unpackaged/main/default/objects/clazar__Offer__c/listViews/clazar__GCP_Marketplace_Offers.listView-meta.xml
<ListView>
    <fullName>clazar__GCP_Marketplace_Offers</fullName>
    <columns>NAME</columns>
    <columns>clazar__status__c</columns>
    <columns>clazar__cloud__c</columns>
    <columns>clazar__expiration_at__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clazar__cloud__c</field>
        <operation>equals</operation>
        <value>gcp</value>
    </filters>
    <label>GCP Marketplace Offers</label>
</ListView>